--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,89 +5,62 @@ build-backend = "hatchling.build"
 [project]
 name = "bblab"
 dynamic = ["version"]
-description = "A collection of reusable utility functions and modules."
+description = """
+`bblab` - A namespace for BitByteLab libraries, tools, scripts, and utilities.
+It does not contain any functional logic beyond branding and identification.
+
+This is a bootstrap file created to reserve the `bblab` name as a namespace
+package. It allows future submodules like `bblab.cli`, `bblab.utils`, `bblab.ai`,
+and others to coexist under a unified namespace in the BitByteLab ecosystem,
+following modern Python packaging practices.
+"""
 readme = "README.md"
-requires-python = ">=3.10"
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
-keywords = [
-  "python", "utils", "utility", "bblab", "bitbytelab"
-]
+requires-python = ">=3.10"
+keywords = ["bitbytelab", "bblab", "namespace", "package"]
 classifiers = [
-  "Operating System :: OS Independent",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: 3.13",
-  "Topic :: Software Development :: Libraries :: Python Modules",
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-dependencies = [
-  "pyjwt",
-  "pandas",
-  "joblib",
-  "colorlog",
-  "requests",
-  "python-dotenv"
-]
+
 authors = [
   { name = "Hasan Rasel", email = "rrss.mahmud@gmail.com" },
 ]
 
-[project.urls]
-Homepage = "https://github.com/bitbytelab/bblab"
-Issues = "https://github.com/bitbytelab/bblab/issues"
-
-[project.optional-dependencies]
-dev = [
-  "hatchling", "uv-dynamic-versioning"
+maintainers = [
+  { name = "Hasan Rasel", email = "rrss.mahmud@gmail.com" },
 ]
 
-[project.scripts]
-bblab = "upwork_cli.__main__:main"
-upworkcli = "upwork_cli.__main__:main"
-upwork-cli = "upwork_cli.__main__:main"
-upwork_cli = "upwork_cli.__main__:main"
+[project.urls]
+Homepage = "https://bitbytelab.github.io/"
+GitHub = "https://github.com/bitbytelab"
+PyPI = "https://pypi.org/project/bblab/"
+
+Author-GitHub = "https://github.com/rsmahmud"
+Author-LinkedIn = "https://www.linkedin.com/in/rsmahmud"
+Author-Portfolio = "https://rsmahmud.github.io/"
 
 [tool.hatch.version]
 source = "uv-dynamic-versioning"
 
-[tool.hatch.build.targets.wheel.sources]
-"src" = ""
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-only-include = [
-  "src/bblab",
-  "LICENSE",
-  "LICENSE.txt",
-  "pyproject.toml",
-  "README.md"
-]
+sources = ["src"]
+only-include = ["src/bblab"]
 
 [tool.hatch.build.targets.sdist]
-exclude = [
-  "/.*",
-  "data_store",
-  "dist",
-  "docs",
-  "logs",
-  "local",
-  "pylint_reports",
-  "src_old*",
-  "tests",
-  "examples",
-  "stored_data",
-  ".vscode",
-  "scripts",
-  "notebooks",
-  "*.sh",
-  "*.csv",
-  "*.env",
-  "*.log",
-  "*.zip",
-  "/*dev*py",
-  "/*local*py",
-  "*name*suggest*.txt",
-  "inject_*.py",
-  "file*map.json",
-  ".last_dep_check",
+only-include = [
+    "assets",
+    "docs",
+    "examples",
+    "src",
+    "tests",
+    "README.md",
+    "pyproject.toml",
+    "ruff.toml"
 ]
